2002-10-14  Eric Blake  <ebb9@email.byu.edu>

	* src/expr.cpp (CanCastConvert): Fix recognition of incompatible
	casts between classes - bug 3320.

2002-10-10  Eric Blake  <ebb9@email.byu.edu>

	* src/scanner.cpp (ScanKeyword7): Fix fallthrough that treated
	"befault" as a keyword.

2002-10-07  Eric Blake  <ebb9@email.byu.edu>

	* src/m4/ac_define_integer_bits.m4: New file.
	* acinclude.m4: Include it.
	* configure.in: Determine types of exact bitwidths required.
	* src/Makefile.am: Update file dependencies.
	* aclocal.m4:
	* configure:
	* Makefile.in:
	* doc/Makefile.in:
	* src/Makefile.in:
	* src/config.h.in: Regenerate.
	* src/platform.h (i1, i2, i4, i8, u1, u2, u4, u8): Use types of
	known size.
	* src/ast.h:
	* src/bytecode.h:
	* src/class.h:
	* src/control.h:
	* src/error.h:
	* src/option.h:
	* src/platform.h:
	* src/scanner.h:
	* src/semantic.h:
	* src/set.h:
	* src/stream.h:
	* src/symbol.h: Optimize to include fewer unnecessary headers;
	helping to speed compilation time slightly.
	* src/ast.cpp (CaseElement::Value, AstExpression::Type):
	* src/body.cpp:
	* src/decl.cpp:
	* src/definite.cpp:
	* src/depend.cpp:
	* src/diagnose.cpp:
	* src/error.cpp (Semantic::PrintMessages, class ErrorString):
	* src/expr.cpp:
	* src/getclass.cpp:
	* src/jikesapi.cpp:
	* src/modifier.cpp:
	* src/option.cpp:
	* src/platform.cpp:
	* src/scanner.cpp:
	* src/stream.cpp (RightColumn, NameString, NameStringLength),
	(LineLength, LineSegmentLength, FindColumn):
	* src/symbol.cpp (IsClassSuffix, IsJavaSuffix):
	* src/system.cpp: Include necessary headers, and move some code
	around to avoid dependencies.

2002-10-04  Eric Blake  <ebb9@email.byu.edu>

	* src/symbol.cpp (GetReadAccessConstructor): Avoid bug when
	accessor constructor is created during final field evaluation -
	bug 3310.
	* src/ast.h (AstBreakStatement, AstContinueStatement): Initialize
	nesting_level, to avoid coredump found on generics-branch.

2002-10-02  Eric Blake  <ebb9@email.byu.edu>
